--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "@popperjs/core": "^2.10.1",
+    "bootstrap": "^5.0.0-beta3",
     "countdown": "^2.6.0",
     "express": "^4.17.1",
     "rxjs": "~6.5.4",
